--- a/The-Eternal-Market/client/templates/buy.html
+++ b/The-Eternal-Market/client/templates/buy.html
@@ -4,5 +4,5 @@
 
 
 <template name="ListingLink">
-<a href="listing.html?id={{ listingID }}">{{title}}</a>
+<a href="listing?id={{ listingID }}">{{title}}</a>
 </template>
