--- a/The-Eternal-Market/client/templates/purchases.html
+++ b/The-Eternal-Market/client/templates/purchases.html
@@ -1,4 +1,4 @@
 <template name="purchases">
 <h2>My Purchases</h2>
-{{> reactiveTable collection=orders_table}}
+{{> reactiveTable collection=orders_table settings = purchaseTableSettings}}
 </template>
