--- a/The-Eternal-Market/client/templates/buttonsAndTableRenderings.html
+++ b/The-Eternal-Market/client/templates/buttonsAndTableRenderings.html
@@ -6,3 +6,17 @@
 <template name="ListingLink">
 <a href="listing?id={{ listingID }}">{{title}}</a>
 </template>
+
+<template name="buy">
+{{> reactiveTable collection=listings_table showRowCount=true settings = buyTableSettings}}
+</template>
+
+
+<template name="sell">
+<div id="new_listing_button"></div>
+<h2>Pending Orders</h2>
+{{> reactiveTable collection=orders_table showFilter=false settings=sellOrderSettings}}
+<h2>Current Listings</h2>
+{{> reactiveTable collection=listings_table settings = sellListingSettings}}
+</template>
+
