--- a/The-Eternal-Market/client/templates/listing.html
+++ b/The-Eternal-Market/client/templates/listing.html
@@ -8,8 +8,14 @@ Seller Public Key<br><textarea rows="4" cols="50" readonly>{{  publicKey}} </tex
 <textarea rows="4" cols="50" id="delivery_address"></textarea>
         
 	<div id = "place"></div>
-	<button type="button" onclick="newOrder({{listingID}},delivery_address.value)">Place Order</button>
-	<button type="button" onclick="removeListing({{listingID}})">Remove Listing</button>
-
+	{{#if showOrderButton}}
+		<button type="button" onclick="newOrder({{listingID}},delivery_address.value)">Place Order</button>
+	{{/if}}<br><br>
+	{{#if showRemoveListingButton}}
+		<button onclick="removeListing({{listingID}})">Remove Listing</button>
+	{{/if}}
+	{{#if showFlagListingButton}}
+		<button onclick="flagListing({{listingID}})">Flag as Inappropriate</button>
+	{{/if}}
 	<div id="button_result"></div>
 </template>
