--- a/The-Eternal-Market/client/templates/home.html
+++ b/The-Eternal-Market/client/templates/home.html
@@ -1,4 +1,7 @@
 <template name="home">
 <h2>News: </h2><br>
-Add Topics: <br>
+Welcome to The Eternal Market (TEM)! Use the menu above to browse the listings, sell a product or service.
+
+Always use the latest version of TEM to ensure your orders and listings are properly handled. The newest version can<br>
+always be found at the github page: xxxxxxxxxxxxxxxxxx
 </template>
