--- a/The-Eternal-Market/client/templates/menu.html
+++ b/The-Eternal-Market/client/templates/menu.html
@@ -3,5 +3,6 @@
 <a href="/buy">Buy</a> 
 <a href="/sell">Sell</a> 
 <a href="/purchases">My Purchases</a> 
+<a href="/community">Community</a>
 <a href="/faq">FAQ</a> 
 </template>
