--- a/The-Eternal-Market/client/templates/buttonsAndTableRenderings.html
+++ b/The-Eternal-Market/client/templates/buttonsAndTableRenderings.html
@@ -1,22 +1,62 @@
 <template name="purchases">
-<h2>My Purchases</h2>
-{{> reactiveTable collection=orders_table settings = purchasesTableSettings}}
+	<h2>My Purchases</h2>
+	{{> reactiveTable class="table table-hover table-bordered" collection=orders_table settings = purchasesTableSettings}}
+</template>
+
+<template name="date">
+	{{convert}}
 </template>
 
 <template name="ListingLink">
-<a href="listing?id={{ listingID }}">{{title}}</a>
+	<a href="listing?id={{ listingID }}">{{title}}</a>
 </template>
 
 <template name="buy">
-{{> reactiveTable collection=listings_table showRowCount=true settings = buyTableSettings}}
+	{{> reactiveTable class="table table-hover table-bordered" collection=listings_table showRowCount=true settings = buyTableSettings}}
 </template>
 
 
 <template name="sell">
-<div id="new_listing_button"></div>
-<h2>Pending Orders</h2>
-{{> reactiveTable collection=orders_table showFilter=false settings=sellOrderSettings}}
-<h2>Current Listings</h2>
-{{> reactiveTable collection=listings_table settings = sellListingSettings}}
+	{{#if seller}}
+		{{#if shareholder}}
+			<button type="button" onclick="newListing({{orderID}})">Create New Listing</button>
+		{{/if}}
+		<h2>Pending Orders</h2>
+		{{> reactiveTable class="table table-hover table-bordered" collection=orders_table showFilter=false settings=sellOrderSettings}}
+		<h2>Current Listings</h2>
+		{{> reactiveTable class="table table-hover table-bordered" collection=listings_table settings = sellListingSettings}}
+	{{else}}
+		You must connect an address to access the seller menu!
+	{{/if}}
 </template>
 
+<template name="orderStatusButtons">
+	{{#if unconfirmed}}
+		{{#if seller }}
+			<button type="button" onclick="confirmShipment({{orderID}})">Confirm Shipment</button> or 
+			<button type="button" onclick="abortOrder({{orderID}})">Cancel Order</button>
+		{{else}}
+			Order Placed
+			{{#if notShippedInTime}}
+				<br><button type="button" onclick="abortOrder({{orderID}})">Cancel Order?</button>
+			{{/if}}
+		{{/if}}
+	{{/if}}
+	{{#if shipped }}
+		{{#if seller }}
+			Waiting for Delivery Confirmation
+		{{else}}
+			Order has been Shipped!<br>
+			<button type="button" onclick="confirmDelivery({{orderID}})">Confirm Delivery</button>
+			{{#if notArrivedInTime }}
+			 	<br>or<br><button type="button" onclick="disputeOrder({{orderID}})">Dispute Order?</button>
+			{{/if}}
+		{{/if}}
+	{{/if}}
+	{{#if delivered }}
+		Completed
+	{{/if}}
+	{{#if disputed }}
+		Disputed
+	{{/if}}
+</template>
