--- a/The-Eternal-Market/client/templates/listing.html
+++ b/The-Eternal-Market/client/templates/listing.html
@@ -5,17 +5,18 @@
 Successful Sales: {{salesSuccessful}}, Success Rate: {{ successRate}}, Last Successful Sale: {{ lastsuccessfulSale}}<br>
 Listing Created: {{ timeListed}}<br>
 Seller Public Key<br><textarea rows="4" cols="50" readonly>{{  publicKey}} </textarea><br><br>
-<textarea rows="4" cols="50" id="delivery_address"></textarea>
+
         
-	<div id = "place"></div>
 	{{#if showOrderButton}}
+		Paste your encrypted shipping address below:<br>
+		<textarea rows="4" cols="50" id="delivery_address"></textarea>
 		<button type="button" onclick="newOrder({{listingID}},delivery_address.value)">Place Order</button>
 	{{/if}}<br><br>
 	{{#if showRemoveListingButton}}
-		<button onclick="removeListing({{listingID}})">Remove Listing</button>
+		<button type="button" onclick="removeListing({{listingID}})">Remove Listing</button>
 	{{/if}}
 	{{#if showFlagListingButton}}
-		<button onclick="flagListing({{listingID}})">Flag as Inappropriate</button>
+		<button type="button" onclick="flagListing({{listingID}})">Flag as Inappropriate</button>
 	{{/if}}
 	<div id="button_result"></div>
 </template>
