--- a/The-Eternal-Market/client/templates/createListing.html
+++ b/The-Eternal-Market/client/templates/createListing.html
@@ -1,38 +1,14 @@
 <template name="createListing">
-<h2>Create a Listing</h2>
-    <div id="listing_info"></div><br>
+<h2>Create a Listing</h2><br>
 	Fill out the information below to create your listing.<br><br>
     
     Listing Title: <input type="text" id="listingTitle" value=""><br>
-    Price (Ether): <input type="text" id="price" value=""><br>
+    Price (Ether): <input type="text" onchange="setListingFeeDynamic(this.value)" id="price" value=""><br>
     Listing Description:<br>
-    <textarea rows="6" cols="80" id="listingDescription" value="Your listing description goes here"></textarea><br>
-    Public Key:<br><textarea rows="4" cols="50" id="sellerPublicKey" value="Paste your public key here"></textarea><br>
-    Fee: <input type="text" readonly id="fee" value="">
-        
+    <textarea rows="6" cols="80" id="listingDescription" value="" placeholder="Your listing description goes here"></textarea><br>
+    Public Key:<br><textarea rows="4" cols="50" id="sellerPublicKey" value="" placeholder="Paste your public key here"></textarea><br>
+    Fee: <input type="text" readonly id="fee" value=""><br>
     
-    <button type="button" onclick="newListing(title,description,public_key,price,fee)">Create Listing</button>
- 
-/*
-		var price_box = document.getElementById('price');
-		var fee_box = document.getElementById('fee');
-		var fee;
-		
-
-		price_box.onchange = function() {
-   			fee = (listing_rate*Number(price_box.value))/100;
-   			fee_box.value = fee;
-   			
-		}
-		
-		
-		
-		
-            var title = document.getElementById('listingTitle').value;
-            var description = document.getElementById('listingDescription').value;
-            var public_key = document.getElementById('sellerPublicKey').value;
-            var price = document.getElementById('price').value; 
-			web3.eth.defaultAccount = accounts[0];
-/*
-</template>
+    <button type="button" onclick="newListing(listingTitle.value,listingDescription.value,sellerPublicKey.value,price.value,fee.value)">Create Listing</button>
+ </template>
 
