--- a/The-Eternal-Market/client/templates/community.html
+++ b/The-Eternal-Market/client/templates/community.html
@@ -1,7 +1,15 @@
 <template name="community">
 <h2>Community</h2>
+    Share Price: <br>
     Your Shares: <br>
-    Expected Profits @ Next Dividend Distribution: <br>
-	Fill out the information below to create your listing.<br><br>
+    Value: <br><br>
+    
+    Proposals:
+    
+    
+    Create Proposal:
+    
+    Buy/Sell Shares:
+    
     
 </template>
