--- a/The-Eternal-Market/client/templates/buttonsAndTableRenderings.html
+++ b/The-Eternal-Market/client/templates/buttonsAndTableRenderings.html
@@ -3,6 +3,10 @@
 	{{> reactiveTable class="table table-hover table-bordered" collection=orders_table settings = purchasesTableSettings}}
 </template>
 
+<template name="proposals">
+	{{> reactiveTable class="table table-hover table-bordered" collection=proposals_table settings = proposalTableSettings}}
+</template>
+
 <template name="date">
 	{{convert}}
 </template>
