--- a/The-Eternal-Market/client/templates/community.html
+++ b/The-Eternal-Market/client/templates/community.html
@@ -4,8 +4,8 @@
     Your Shares: <br>
     Value: <br><br>
     
-    Proposals:
-    
+    Proposals:<br>
+    {{proposals}}
     
     Create Proposal:
     
