--- a/The-Eternal-Market/client/templates/listing.html
+++ b/The-Eternal-Market/client/templates/listing.html
@@ -1,23 +1,25 @@
 <template name="listing"> 
 	<h2>{{ title}}</h2><br>
 	{{ listingDescription }}<br>
-	Price: {{ price}}<br><br>
+	Price: {{ convertPrice }}<br><br>
 Successful Sales: {{salesSuccessful}}, Success Rate: {{ successRate}}, Last Successful Sale: {{ lastsuccessfulSale}}<br>
 Listing Created: {{ timeListed}}<br>
 Seller Public Key<br><textarea rows="4" cols="50" readonly>{{  publicKey}} </textarea><br><br>
         
 	{{#if userIsSeller}}
-		<input type="text" id="newPrice" value="New Price"><button type="button" onclick="changeListingPrice({{listingID}},newPrice.value)">Change Price</button><br>
+		<input type="text" id="newPrice" value="New Price"><button type="button" onclick="changeListingPrice({{listingID}},newPrice.value,{{price}})">Change Price</button><br>
 	{{else}}
 		Paste your encrypted shipping address below:<br>
 		<textarea rows="4" cols="50" id="delivery_address"></textarea><br>
-		<button type="button" onclick="newOrder({{listingID}},delivery_address.value)">Place Order</button><br>
-		<button type="button" onclick="flagListing({{listingID}})">Flag as Inappropriate</button>
+		<button type="button" onclick="newOrder({{listingID}},delivery_address.value)">Place Order</button><br><br>
+		{{#if userIsShareholder}}
+			<button type="button" onclick="flagListing({{listingID}})">Flag for Removal</button>
+		{{else}}		
+			<button type="button" onclick="flagListingButtonNotAShareHolder()">Flag for Removal</button>	
+		{{/if}}
 	{{/if}}<br>
 	{{#if showRemoveListingButton}}
 		<button type="button" onclick="removeListing({{listingID}})">Remove Listing</button>
-	{{/if}}
-	{{#if showFlagListingButton}}
 	{{/if}}
 	<div id="button_result"></div>
 </template>
