--- a/The-Eternal-Market/client/templates/community.html
+++ b/The-Eternal-Market/client/templates/community.html
@@ -1,33 +1,44 @@
 <template name="community">
 <h2>Community</h2>
-	Share Price: {{sharePrice}}<br>
-{{#if isShareholder}}
-    Your Shares: {{shares}} <br>
-    {{/if}}
-    Shares Outstanding: <br>
-    Market Value: <br><br>
     
     {{#unless isShareholder}}
     To vote on a proposal you must be a shareholder. 
     {{/unless}}
-    <h2>Proposals:</h2><br>
+    <h3>Proposals:</h3><br>
     
     	{{> reactiveTable class="table table-hover table-bordered" collection=proposals_table settings = proposalTableSettings}}
-
+	<br>
+    <h3>Your Holdings</h3>
+    {{#if isShareholder}}
+    {{shares}} shares @ {{shareBuyPrice}} ether/share <br>
+    {{else}}
+    You do not own any shares. To join in the community but shares using the menu below!
+    {{/if}}
     
-    <h2>Buy Shares:</h2>
-    <input type="text" value="{{sharePrice}}" readonly> Buy Price (Ether)<br>
-    <input type="text" id="sharesToBuy" value=""> Shares to Buy<br>
+    <table>
+    <tr>
+    <th><h3>Market Data</h3></th>
+    <th><h3>Buy Shares</h3></th>
+    <th><h3>Sell Shares</h3></th>
+    </tr>
+    <tr>
+    <td>
+    Market Info
+    </td>
+    <td>
+    <input type="text" value="{{shareBuyPrice}}" readonly> Buy Price (Ether)<br>
+    <input type="text" id="sharesToBuy" onchange="setCostToBuyDynamic(this.value,{{shareBuyPrice}})" value=""> Shares to Buy<br>
     <input type="text" id="costToBuyShares" readonly value=""> Total Cost<br>
-    <button type="button" onclick="" >Buy Shares</button>
-    
-    
-    <h2>Sell Shares:</h2>
-    <input type="text" value="{{sharePrice}}" readonly> Sell Price (Ether)<br>
-    <input type="text" readonly value={{shares}}>Shares Owned<br>
-    <input type="text" value="" id="sharesToSell">Shares to Sell:<br>
-    <input type="text" value="" id="profitFromShareSales">Value of Sale<br>
-    <button type="button" onclick="" >Sell Shares</button>
-    
+    <button type="button" onclick="buyShares(costToBuyShares.value)" >Buy Shares</button>
+    </td>
+    <td>
+    <input type="text" value="{{shareSellPrice}}" readonly> Sell Price (Ether)<br>
+    <input type="text" readonly value={{shares}}> Shares Owned<br>
+    <input type="text" value="" onchange="setSellBoxDynamic(this.value,{{shareSellPrice}})" id="sharesToSell"> Shares to Sell:<br>
+    <input type="text" value="" id="profitFromShareSales"> Estimated Ether Earned<br>
+    <button type="button" onclick="sellShares(sharesToSell.value)" >Sell Shares</button>
+    </td>
+    </tr>
+    </table>
     
 </template>
