--- a/The-Eternal-Market/client/templates/community.html
+++ b/The-Eternal-Market/client/templates/community.html
@@ -10,7 +10,7 @@
 	<br>
     <h3>Your Holdings</h3>
     {{#if isShareholder}}
-    {{shares}} shares @ {{shareBuyPrice}} ether/share <br>
+    {{shares}} shares @ {{shareSellPrice}} ether/share <br>
     {{else}}
     You do not own any shares. To join in the community but shares using the menu below!
     {{/if}}
