--- a/The-Eternal-Market/client/templates/listing.html
+++ b/The-Eternal-Market/client/templates/listing.html
@@ -5,21 +5,34 @@
 Successful Sales: {{salesSuccessful}}, Success Rate: {{ successRate}}, Last Successful Sale: {{ lastsuccessfulSale}}<br>
 Listing Created: {{ timeListed}}<br>
 Seller Public Key<br><textarea rows="4" cols="50" readonly>{{  publicKey}} </textarea><br><br>
-        
+	
 	{{#if userIsSeller}}
 		<input type="text" id="newPrice" value="New Price"><button type="button" onclick="changeListingPrice({{listingID}},newPrice.value,{{price}})">Change Price</button><br>
+		{{#if showRemoveListingButton}}
+			<br><button type="button" onclick="removeListing({{listingID}})">Remove Listing</button><br>
+		{{/if}}
+		<h2> Buyer Feedback </h2>
+    	{{#each feedback}}
+    		{{.}}
+    	{{/each}}
 	{{else}}
 		Paste your encrypted shipping address below:<br>
 		<textarea rows="4" cols="50" id="delivery_address"></textarea><br>
 		<button type="button" onclick="newOrder({{listingID}},delivery_address.value)">Place Order</button><br><br>
+		<h2> Buyer Feedback </h2>
+    	{{#each feedback}}
+    		{{.}}
+    	{{/each}}
+    
 		{{#if userIsShareholder}}
 			<button type="button" onclick="flagListing({{listingID}})">Flag for Removal</button>
 		{{else}}		
 			<button type="button" onclick="flagListingButtonNotAShareHolder()">Flag for Removal</button>	
 		{{/if}}
+		{{#if showRemoveListingButton}}
+			<button type="button" onclick="removeListing({{listingID}})">Remove Listing</button>
+		{{/if}}
 	{{/if}}<br>
-	{{#if showRemoveListingButton}}
-		<button type="button" onclick="removeListing({{listingID}})">Remove Listing</button>
-	{{/if}}
+	
 	<div id="button_result"></div>
 </template>
