--- a/truffleTest/src/App.css
+++ b/truffleTest/src/App.css
@@ -2,11 +2,10 @@
 
 body,
 .pure-g [class*=pure-u] {
-  font-family: 'Open Sans', sans-serif;
 }
 
 h1, h2, h3 {
-  font-family: 'Oswald', 'Arial Narrow', sans-serif;
+  font-family: 'Arial Narrow', sans-serif;
 }
 
 code {
@@ -40,7 +39,7 @@ code {
   position: fixed;
   padding: 5px;
   background: #0c1a2b;
-  font-family: 'Oswald', 'Arial Narrow', sans-serif;
+  font-family:  'Arial Narrow', sans-serif;
 }
 
 .navbar a {
