--- a/src/css/eternalMarket.css
+++ b/src/css/eternalMarket.css
@@ -52,6 +52,10 @@ code {
   background: #233e5e;
 }
 
+.avoid-clicks {
+  pointer-events: none;
+}
+
 .navbar .pure-menu-heading {
   font-weight: bold;
   text-transform: none;
